hard-gists/2790749/run.log
=== Docker Run Log for 2790749 ===
Started at: Mi 29. Okt 13:15:07 CET 2025

[2025-10-29 13:15:07] START: Running container for 2790749
[2025-10-29 13:15:08] SUCCESS: Container 601a376b8ffa523a3709bfbb4275d1056bd7fc79f15b11df6b3f74e8d297cbd4 started for 2790749
=== Container logs for 2790749 ===
  File "/snippet.py", line 14
    print "Waiting for notifications on channel 'test'"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2790749 ===
[2025-10-29 13:15:10] INFO: Container 601a376b8ffa523a3709bfbb4275d1056bd7fc79f15b11df6b3f74e8d297cbd4 has stopped
